completed basis OIA computation

--- a/analysis/compute_OIA.Rmd
+++ b/analysis/compute_OIA.Rmd
@@ -7,9 +7,419 @@ editor_options:
   chunk_output_type: console
 ---
 
-## Introduction
+```{r parent, child = "/nfs/kryo/work/jenmueller/emlr_cant/utilities/setup.Rmd"}
+# this chunk runs the code stored in setup.Rmd
+# if required, please refer to instructions given here:
+# https://jdblischak.github.io/workflowr/articles/wflow-07-common-code.html
+```
 
-```{r}
+# Libraries
+
+```{r load_libraries_specific, include = FALSE}
+library(patchwork)
+library(ggalluvial)
+library(marelac)
+library(ggdist)
+library(kableExtra)
+library(khroma)
+library(ggh4x)
+library(ggpattern)
+library(colorspace)
+library(stars)
+library(seacarb)
+```
+
+```{r select_basinmask_5}
+
+basinmask <- basinmask %>% 
+  filter(MLR_basins == "5") %>% 
+  select(lon, lat, basin)
 
 ```
+
+
+```{r define_paths_to_access_eMLR_files, include = FALSE}
+
+# only path_observations needs to be changed to model
+path_observations <-
+  paste0(path_root, "/observations/")
+
+path_preprocessing    <-
+  paste0(path_observations, "preprocessing/")
+
+
+path_preprocessing_model    <-
+  paste0(path_root, "/model/preprocessing/")
+
+path_out <-   paste0(path_observations, "output_publication/")
+path_OIA <-   "/nfs/kryo/work/jenmueller/ocean_interior_acidification/"
+
+
+```
+
+# Read data
+
+## Delta Cant
+
+```{r read_interior_dcant_files}
+
+file_out <- paste0(path_out, "dcant_emlr_cstar_mueller_94-04-14.nc")
+
+dcant_3d_read_mdim <-
+  read_mdim(file_out)
+
+ggplot() +
+  geom_stars(data = dcant_3d_read_mdim %>% 
+               filter(period == "1994 - 2004",
+                      depth == 50)) +
+  facet_grid(MLR_basins~Version_ID_group) +
+  scale_fill_viridis_b(breaks = c(-Inf, seq(0,16,2), Inf),
+                       na.value = "transparent")
+
+
+dcant_3d_tibble <- dcant_3d_read_mdim %>% 
+               filter(Version_ID_group == "Standard case",
+                      MLR_basins == "3") %>% 
+  as_tibble()
+
+rm(dcant_3d_read_mdim)
+
+dcant_3d_tibble <- dcant_3d_tibble %>% 
+  drop_na()
+
+# dcant_3d_tibble <- dcant_3d_tibble %>%
+#   filter(lon == 335.5,
+#          lat == 0.5)
+
+
+dcant_3d_tibble %>%
+  filter(depth == 500) %>% 
+  ggplot() +
+  geom_raster(aes(lon, lat, fill = dcant)) +
+  facet_grid(MLR_basins~Version_ID_group) +
+  scale_fill_viridis_b(breaks = c(-Inf, seq(0,16,2), Inf),
+                       na.value = "transparent")
+
+# dcant_3d_tibble %>% 
+#   ggplot() +
+#   geom_path(aes(dcant, depth, col = period)) +
+#   scale_y_reverse()
+
+```
+
+```{r tcant_sabine_2004}
+
+S04_cant_3d <-
+  read_csv(paste(path_preprocessing,
+                 "S04_tcant_3d.csv",
+                 sep = ""))
+
+```
+
+
+# Required data
+
+## Observational
+
+Currently, following data sets are used for mapping:
+
+- GLODAPv2_2016b_MappedClimatologies, with variables  
+  - Phosphate (-> phosphate_star)
+  - Silicate
+  - Oxygen (-> AOU)
+  - TAlk (surface only)
+  - TCO2 (surface only)
+
+
+```{r load_GLODAPv2_2016b_MappedClimatologies_interior_mapping}
+
+variables <-
+  c("TCO2", "TAlk", "PO4", "silicate", "NO3")
+
+# i_variable <- variables[1]
+
+for (i_variable in variables) {
+  temp <- read_csv(paste(
+    path_preprocessing,
+    paste("GLODAPv2_2016_MappedClimatology_", i_variable, ".csv", sep = ""),
+    sep = ""
+  ))
+  
+  if (exists("GLODAP_predictors")) {
+    GLODAP_predictors <- full_join(GLODAP_predictors, temp)
+  }
+  
+  if (!exists("GLODAP_predictors")) {
+    GLODAP_predictors <- temp
+  }
+}
+
+rm(temp, i_variable, variables)
+
+GLODAP_predictors <- GLODAP_predictors %>%
+  rename(phosphate = PO4,
+         nitrate = NO3,
+         talk = TAlk,
+         tco2 = TCO2)
+
+# removed na's attributable to slightly different coverage of predictor fields
+GLODAP_predictors <- GLODAP_predictors %>%
+  drop_na()
+
+```
+
+
+
+- World Ocean Atlas 2018  
+  - Salinity
+  - Temperature
+  - Neutral density
+
+```{r load_WOA18}
+
+WOA18_predictors <-
+  read_csv(paste(path_preprocessing,
+                 "WOA18_sal_temp.csv",
+                 sep = ""))
+
+WOA18_predictors_nuts_O2 <-
+  read_csv(paste(path_preprocessing,
+                 "WOA18_nuts_O2.csv",
+                 sep = ""))
+
+```
+
+# Join data
+
+## WOA18 + GLODAP
+
+WOA18 and GLODAP predictor climatologies are merged. Only horizontal grid cells with observations from both predictor fields are kept.
+
+```{r join_WOA18_GLODAP_predictors}
+
+# join deep water predictors
+
+predictors <- right_join(GLODAP_predictors,
+                          WOA18_predictors)
+
+predictors <- rquery::natural_join(predictors, WOA18_predictors_nuts_O2,
+                           by = c("lon", "lat", "depth", "basin_AIP"),
+                           jointype = "LEFT") %>% 
+  as_tibble()
+
+predictors <- predictors %>% 
+  drop_na()
+
+
+rm(GLODAP_predictors, WOA18_predictors_nuts_O2, WOA18_predictors)
+
+```
+
+## predictors + Cant
+
+```{r join_predictors_dcant}
+
+# predictors %>% distinct(depth) %>% pull()
+# S04_cant_3d %>% distinct(depth) %>% pull()
+# dcant_3d_tibble %>% distinct(depth) %>% pull()
+
+DIC_1994 <- 
+  inner_join(predictors,
+             dcant_3d_tibble %>% filter(period == "1994 - 2004") %>% 
+               select(-period))
+
+
+DIC_1994 <- DIC_1994 %>% 
+  mutate(tco2 = tco2 - 0.8 * dcant)
+
+DIC_2004 <- DIC_1994 %>% 
+  mutate(tco2 = tco2 + dcant)
+
+DIC_2014 <-
+  inner_join(DIC_2004 %>% select(-dcant),
+             dcant_3d_tibble %>% filter(period == "2004 - 2014") %>%
+               select(-period))
+
+DIC_2014 <- DIC_2014 %>% 
+  mutate(tco2 = tco2 + dcant)
+
+
+DIC_1800 <- inner_join(
+  DIC_1994,
+  S04_cant_3d %>% select(lon, lat, depth, tcant)
+)
+
+DIC_1800 <- DIC_1800 %>% 
+  mutate(tco2 = tco2 - tcant)
+
+DIC <- bind_rows(
+  DIC_1800 %>% mutate(tref = "1800"),
+  DIC_1994 %>% mutate(tref = "1994"),
+  DIC_2004 %>% mutate(tref = "2004"),
+  DIC_2014 %>% mutate(tref = "2014")
+)
+
+rm(DIC_1800, DIC_1994, DIC_2004, DIC_2014, predictors, dcant_3d_tibble, S04_cant_3d)
+
+acidification <- DIC %>%
+  mutate(
+    carb(
+      flag = 15,
+      var1 = talk * 1e-6,
+      var2 = tco2 * 1e-6,
+      S = sal,
+      T = temp,
+      P = depth / 10,
+      Pt = phosphate * 1e-6,
+      Sit = silicate * 1e-6,
+      k1k2 = "s20",
+      kf = "dg"
+    )
+  )
+
+acidification <- acidification %>%
+  select(-c(dcant, tcant, flag, S, T, Patm, P, DIC, ALK))
+
+acidification <- acidification %>%
+  mutate(hyd_ion = 10^(-pH))
+
+
+calc_delta_total <- function(x) (x - first(x))
+calc_delta_interval <- function(x) (x - lag(x, default = first(x)))
+
+acidification_trend <- acidification %>% 
+  arrange(tref) %>% 
+  group_by(lat, lon, depth) %>% 
+  mutate(
+    across(
+      .cols = c(tco2, pH, pCO2insitu, HCO3, CO3, OmegaAragonite, OmegaCalcite, hyd_ion),
+      .fns = list(delta_total = calc_delta_total, delta_interval = calc_delta_interval)
+    )
+  ) %>% 
+  ungroup()
+
+
+```
+
+```{r zonal_mean_sections}
+
+
+acidification_zonal <- acidification %>%
+  group_by(tref) %>%
+  nest() %>%
+  mutate(zonal = map(.x = data, ~m_zonal_mean_sd(.x))) %>%
+  select(-data) %>%
+  unnest(zonal)
+
+# dcant_zonal <- m_cut_gamma(dcant_zonal,
+#                            "gamma_mean")
+
+
+
+```
+
+```{r global_section}
+
+acidification_global_section <- acidification_trend %>%
+  group_by(tref) %>%
+  nest() %>%
+  mutate(zonal = map(.x = data, ~m_section_global_mean_sd(.x))) %>%
+  select(-data) %>%
+  unnest(zonal)
+
+p_section_global(
+  df = acidification_global_section %>%
+    filter(tref == "2014"),
+  var = "pH_mean",
+  plot_slabs = "n"
+)
+
+p_section_global(
+  df = acidification_global_section %>%
+    filter(tref == "1994"),
+  var = "pH_delta_interval_mean",
+  plot_slabs = "n"
+)
+
+p_section_global(
+  df = acidification_global_section %>%
+    filter(tref == "2014"),
+  var = "hyd_ion_delta_interval_mean",
+  plot_slabs = "n"
+)
+
+```
+
+```{r mean_profiles}
+
+basinmask <- basinmask %>% 
+    mutate(area = earth_surf(lat, lon))
+
+acidification_profiles <- full_join(basinmask,
+          acidification_trend %>% select(-c(basin_AIP, MLR_basins, Version_ID_group))) %>%
+  drop_na() %>%
+  relocate(tref) %>%
+  mutate(across(gamma:hyd_ion_delta_interval,
+                ~ . * area))
+
+acidification_profiles <- acidification_profiles %>%
+  group_by(tref, basin, depth) %>%
+  summarise(across(gamma:hyd_ion_delta_interval,
+                   ~ sum(.) / sum(area))) %>%
+  ungroup()
+
+  
+acidification_profiles %>% 
+  select(tref, basin, depth, contains("delta_total")) %>% 
+  pivot_longer(-c(tref:depth),
+               names_to = "variable",
+               values_to = "delta_total") %>% 
+  filter(tref != 1800) %>% 
+  ggplot(aes(delta_total, depth, col = tref)) +
+  geom_vline(xintercept = 0) +
+  geom_path() +
+  scale_y_reverse() +
+  facet_grid(basin ~ variable, scales = "free_x")
+  
+acidification_profiles %>% 
+  select(tref, basin, depth, contains("delta_interval")) %>% 
+  pivot_longer(-c(tref:depth),
+               names_to = "variable",
+               values_to = "delta_interval") %>% 
+  filter(!(tref %in% c(1800,1994))) %>% 
+  ggplot(aes(delta_interval, depth, col = tref)) +
+  geom_vline(xintercept = 0) +
+  geom_path() +
+  scale_y_reverse() +
+  facet_grid(basin ~ variable, scales = "free_x")
+
+
+```
+
+
+
+# Write ouput
+
+```{r write_output_files}
+
+acidification_trend %>% 
+  write_csv(paste0(path_OIA, "OIA.csv"))
+
+
+acidification_zonal %>% 
+  write_csv(paste0(path_OIA, "OIA_zonal.csv"))
+
+
+acidification_global_section %>% 
+  write_csv(paste0(path_OIA, "OIA_global_section.csv"))
+
+acidification_profiles %>% 
+  write_csv(paste0(path_OIA, "OIA_profiles.csv"))
+
+
+
+
+```
+
+
 
