calculated OIA layer

--- a/analysis/compute_OIA.Rmd
+++ b/analysis/compute_OIA.Rmd
@@ -301,20 +301,86 @@ acidification_trend <- acidification %>%
 
 ```
 
+```{r layered_maps}
+
+
+acidification_layer <- acidification_trend %>%
+  mutate(depth_layer = cut(
+    depth,
+    c(0, 50, 100, 250, 500, 1000, 1500, 2000, 3000),
+    include.lowest = TRUE
+  )) %>%
+  drop_na() %>%
+  select(c(lat, lon, depth_layer, tref), where(is.numeric)) %>%
+  fgroup_by(lat, lon, depth_layer, tref) %>% {
+    add_vars(
+      fgroup_vars(., "unique"),
+      fmean(., keep.group_vars = FALSE) %>% add_stub(pre = FALSE, "_mean"),
+      fsd(., keep.group_vars = FALSE) %>% add_stub(pre = FALSE, "_sd")
+    )
+  }
+
+acidification_layer %>% 
+  filter(depth_layer %in% unique(acidification_layer$depth_layer)[c(1,5)],
+         tref != 1800) %>% 
+  ggplot(aes(lon, lat, fill = CO3_delta_total_mean)) +
+  geom_raster() +
+  scale_fill_viridis_c(direction = -1) +
+  facet_grid(tref ~ depth_layer) +
+  coord_quickmap()
+
+acidification_layer %>% 
+  filter(depth_layer %in% unique(acidification_layer$depth_layer)[c(1,5)],
+         tref != 1800) %>% 
+  ggplot(aes(lon, lat, fill = CO3_delta_interval_mean)) +
+  geom_raster() +
+  scale_fill_viridis_c(direction = -1) +
+  facet_grid(tref ~ depth_layer) +
+  coord_quickmap()
+
+acidification_layer %>% 
+  filter(depth_layer %in% unique(acidification_layer$depth_layer)[c(1,5)],
+         tref != 1800) %>% 
+  ggplot(aes(lon, lat, fill = pH_delta_total_mean)) +
+  geom_raster() +
+  scale_fill_viridis_c(direction = -1) +
+  facet_grid(tref ~ depth_layer) +
+  coord_quickmap()
+
+```
+
+
+
+
 ```{r zonal_mean_sections}
 
 
-acidification_zonal <- acidification %>%
+acidification_zonal <- acidification_trend %>%
   group_by(tref) %>%
   nest() %>%
   mutate(zonal = map(.x = data, ~m_zonal_mean_sd(.x))) %>%
   select(-data) %>%
   unnest(zonal)
 
-# dcant_zonal <- m_cut_gamma(dcant_zonal,
-#                            "gamma_mean")
+acidification_zonal %>%
+  filter(
+    tref!= 1800
+  ) %>%
+  p_section_zonal_continous_depth(var = "tco2_delta_total_mean",
+                                  plot_slabs = "n",
+                                  breaks = c(-Inf,seq(0,80,10), Inf),
+                                  title_text = NULL) +
+  facet_grid(basin_AIP~tref)
 
-
+acidification_zonal %>%
+  filter(
+    tref!= 1800
+  ) %>%
+  p_section_zonal_continous_depth(var = "CO3_delta_total_mean",
+                                  plot_slabs = "n",
+                                  breaks = c(-Inf,seq(-0.00005,0.00001,0.00001), Inf),
+                                  title_text = NULL) +
+  facet_grid(basin_AIP~tref)
 
 ```
 
@@ -405,6 +471,9 @@ acidification_profiles %>%
 acidification_trend %>% 
   write_csv(paste0(path_OIA, "OIA.csv"))
 
+
+acidification_layer %>% 
+  write_csv(paste0(path_OIA, "OIA_layer.csv"))
 
 acidification_zonal %>% 
   write_csv(paste0(path_OIA, "OIA_zonal.csv"))
